# INT3401E_3_N4_Chess

./: .gitmodules  Elo_Calculation.py  Minimax.py  README.md  UI.py  UICvL.py  UIPvC.py  UIPvP.py  bot_elo.txt  environment.txt  evaluate.py  generate_move.py  tempCodeRunnerFile.py  test_import_global.py
END/: CMakeLists.txt  ComputeMove.cpp  ComputeMove.h  Elo_Calculation.py  TranspositionTable.cpp  TranspositionTable.h  UI.py  ZobristHashing.cpp  ZobristHashing.h  bindings.cpp  heuristic.cpp  heuristic.h
END/chess/: chess.cpp  chess.h
chess/: chess.cpp  chess.h
engine/: ComputeMove.py  Minimax.py  heuristic.py  uci_interface.py
engine/cpp/: BitBoardUtils.cpp  BitBoardUtils.hpp  ComputeMove.cpp  Tables.cpp  Tables.hpp  TranspositionTable.cpp  TranspositionTable.h  Types.hpp  Utils.cpp  Utils.hpp  ZobristHashing.cpp  ZobristHashing.h  heuristic.cpp  main.cpp  uci_engine.cpp
